[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/glassPanel_200.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://assets/Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/barHorizontal_green_mid 200.png" type="Texture" id=5]
[ext_resource path="res://PauseMenu.gd" type="Script" id=6]

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Container"]
margin_right = 920.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 4 )
text = "Level Paused

"

[node name="ProgressContainer" type="HBoxContainer" parent="Container"]
margin_top = 172.0
margin_right = 920.0
margin_bottom = 229.0

[node name="TextureProgress" type="TextureProgress" parent="Container/ProgressContainer"]
margin_right = 200.0
margin_bottom = 57.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 5 )

[node name="Label" type="Label" parent="Container/ProgressContainer"]
margin_left = 204.0
margin_right = 267.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 1 )
text = "100%
"

[node name="ButtonBox" type="HBoxContainer" parent="Container"]
margin_top = 233.0
margin_right = 920.0
margin_bottom = 339.0

[node name="Restart" type="Button" parent="Container/ButtonBox"]
margin_right = 288.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 1 )
text = "Restart"
icon = ExtResource( 3 )

[node name="Continue" type="Button" parent="Container/ButtonBox"]
margin_left = 292.0
margin_right = 598.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 1 )
text = "Continue"
icon = ExtResource( 3 )

[node name="ToMenu" type="Button" parent="Container/ButtonBox"]
margin_left = 602.0
margin_right = 920.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"
icon = ExtResource( 3 )

[connection signal="pressed" from="Container/ButtonBox/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Container/ButtonBox/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Container/ButtonBox/ToMenu" to="." method="_on_ToMenu_pressed"]
